--- a/style.css
+++ b/style.css
@@ -8,15 +8,20 @@ html {
   font-family: 'Open Sans', Arial, sans-serif;
 }
 
+body {
+  background-color: #e9eef2;
+}
+
+/* баннер с анонсом и формой обратной связи для замера заказа */
 .container {
   max-width: 1376px;
-  margin: 50px auto 0;
+  margin: auto 0;
   padding: 0 20px;
 }
 
 .banner {
   min-height: 500px;
-  background: #e9eef2 url(img/Untitled-1.jpg) no-repeat center/cover;
+  background: #e9eef2 url(img/banner/Untitled-1.jpg) no-repeat center/cover;
 }
 
 .banner__inner {
@@ -45,7 +50,12 @@ html {
   color: #FFFFFF;
   background: #7493EF;
   box-shadow: 0 4px 7px rgba(125, 154, 242, 0.2), inset 0 4px 7px #A0B6F8;
+  transition: .3s background-color;
   cursor: pointer;
+}
+
+.bigbtn:hover {
+  background: #597eeb;
 }
 
 .popup {
@@ -207,6 +217,84 @@ textarea:focus {
   background-color: #5e5e5e;
 }
 
-.btn-close:active {
-  border: 1px dashed #5e5e5e;
+/* блок «Виды деревянных жалюзи» с формами заказа и ценой */
+.container {
+  max-width: 1376px;
+  margin: 50px auto 0;
+  padding: 0 20px;
+}
+
+.blinds__content {
+  margin-bottom: 50px;
+  text-align: center;
+}
+
+.blinds__title {
+  font-size: 39px;
+  line-height: 1.8;
+  color: #0490d7;
+}
+
+.blinds__text {
+  max-width: 740px;
+  margin: 0 auto;
+}
+
+.blinds__item {
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+}
+
+.blinds__inner {
+  display: flex;
+  flex-direction: column;
+  max-width: 340px;
+}
+
+.blinds__inner:nth-child(-n+3) {
+  margin-bottom: 50px;
+}
+
+.blinds__product {
+  margin-bottom: 5px;
+  font-size: 20px;
+  font-weight: 600;
+}
+
+.blinds__price {
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+  gap: 10px;
+}
+
+.old-price {
+  font-weight: 500;
+  text-decoration: line-through;
+  color: #747474;
+}
+
+.new-price span {
+  font-size: 25px;
+  font-weight: 500;
+  word-spacing: -4px;
+  color: #0490d7;
+}
+
+.blinds__inner img {
+  margin-bottom: 10px;
+}
+
+.blinds__inner p {
+  margin-bottom: 30px;
+  flex-grow: 1;
+}
+
+.blinds__btn {
+  text-align: center;
+}
+
+.bigbtn_mod {
+  padding: 1.15rem 1.5rem;
 }
