completed the blinds control block

--- a/style.css
+++ b/style.css
@@ -262,6 +262,7 @@ textarea:focus {
 
 .blinds__price {
   display: flex;
+  justify-content: center;
   align-items: center;
   margin-bottom: 20px;
   gap: 10px;
@@ -397,7 +398,7 @@ textarea:focus {
 .blinds-dimensions__inner {
   display: flex;
   flex-direction: column;
-  max-width: 270px;
+  max-width: 290px;
   width: 100%;
   text-align: center;
 }
@@ -416,9 +417,14 @@ textarea:focus {
 }
 
 /* блок «Типы установки» */
+.install-types {
+  margin-bottom: 50px;
+}
+
 .install-types__tab-menu {
   margin-bottom: 30px;
 }
+
 .install-types__tab-menu-item {
   display: flex;
   justify-content: space-between;
@@ -456,4 +462,9 @@ textarea:focus {
   margin-bottom: 40px;
   font-size: 20px;
   font-weight: 500;
+}
+
+/* блок «Управление» */
+.blinds-control {
+  margin-bottom: 50px;
 }
