completed the work stages block

--- a/style.css
+++ b/style.css
@@ -490,7 +490,55 @@ textarea:focus {
   font-size: 14px;
 }
 
-/* блок «Правильный замер» */
+/* блок «Типы крепления» */
   .mounting-types {
     margin-bottom: 50px;
+  }
+  
+/* блок «Этапы работы» */
+  .work-stages {
+    min-height: 768px;
+    margin-bottom: 50px;
+    padding: 20px 40px;
+    background: #e9eef2 url(img/banner/work-stages-bg.jpg) no-repeat center/cover;
+  }
+
+  .work-stages__content {
+    max-width: 700px;
+    margin-left: auto;
+  }
+
+  .work-stages__title {
+    font-size: 39px;
+    font-weight: 600;
+    color: #0490d7;
+    text-align: center;
+  }
+
+  .word-stages__info-block {
+    margin: 30px 0;
+    padding: 20px;
+    border-radius: 10px;
+    background-color: rgba(255, 255, 255, .8)
+  }
+
+  .word-stages__info-title {
+    font-size: 20px;
+    font-weight: 600;
+    text-align: center;
+    color: #0490d7;
+  }
+
+  .word-stages__info-list {
+    margin: 20px 0;
+    list-style-type: none;
+  }
+
+  .word-stages__info-link {
+    padding-left: 25px;
+    background: url(img/check-img.png) no-repeat 0 3px;
+  }
+
+  .word-stages__info-link:not(:last-child) {
+    margin-bottom: 5px;
   }
