--- a/style.css
+++ b/style.css
@@ -16,8 +16,9 @@ html {
 }
 
 .banner {
+  max-width: 1336px;
   min-height: 500px;
-  margin: 50px 0;
+  margin: 50px auto;
   background: #e9eef2 url(/img/banner/bg.jpg) no-repeat center/cover;
 }
 
@@ -215,6 +216,64 @@ textarea:focus {
   background-color: #5e5e5e;
 }
 
+@media screen and (max-width: 1000px) {
+  .banner__inner {
+    padding: 45px 100px 0 100px;
+  }
+  .banner__title {
+    font-size: 37px;
+  }
+  .bigbtn {
+    padding: 1.25rem 2.4rem;
+  }
+}
+
+@media screen and (max-width: 845px) {
+  .banner__title {
+    font-size: 30px;
+  }
+  .banner__inner {
+    padding: 75px 100px 0 75px;
+  }
+  .banner {
+    margin: 20px 0;
+  }
+}
+
+@media screen and (max-width: 650px) {
+  .banner__inner {
+    padding: 50px 50px 0 50px;
+  }
+  .popup__inner {
+    width: 470px;
+  }
+}
+
+@media screen and (max-width: 550px) {
+  .banner__inner {
+    padding: 30px 30px 30px 30px;
+  }
+  .banner__title {
+    font-size: 25px;
+  }
+  .popup__inner {
+    width: 370px;
+  }
+}
+
+@media screen and (max-width: 420px) {
+  .banner__title {
+    margin-bottom: 100px;
+    font-size: 20px;
+  }
+  .bigbtn {
+    padding: 1rem 1.2rem;
+  }
+  .popup__inner {
+    width: 270px;
+  }
+}
+
 /* блок «Виды деревянных жалюзи» с формами заказа и ценой */
 .blinds {
   margin-bottom: 50px;
@@ -242,6 +301,7 @@ textarea:focus {
   display: flex;
   justify-content: space-evenly;
   flex-wrap: wrap;
+  gap: 30px;
 }
 
 .blinds__inner {
@@ -282,6 +342,7 @@ textarea:focus {
 }
 
 .blinds__inner img {
+  width: 100%;
   margin-bottom: 10px;
 }
 
@@ -296,6 +357,54 @@ textarea:focus {
 
 .bigbtn_mod {
   padding: 1.15rem 1.5rem;
+}
+
+@media screen and (max-width: 1136px) {
+  .blinds__inner:nth-child(-n+4) {
+    margin-bottom: 50px;
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  .blinds__title {
+    font-size: 37px;
+  }
+  .blinds__text {
+    font-size: 14px;
+  }
+  .blinds__inner {
+    font-size: 14px;
+  }
+  .blinds__inner:nth-child(-n+4) {
+    margin-bottom: 30px;
+  }
+  .blinds__product {
+    font-size: 16px;
+  }
+}
+
+@media screen and (max-width: 845px) {
+  .blinds {
+    margin-bottom: 20px;
+  }
+  .blinds__content {
+    margin-bottom: 30px;
+  }
+  .blinds__title {
+    font-size: 30px;
+  }
+}
+
+@media screen and (max-width: 550px) {
+  .blinds__title {
+    font-size: 25px;
+  }
+  .blinds__item {
+    gap: 0;
+}
+  .bigbtn_mod {
+    padding: 0.8rem 0.8rem;
+  }
 }
 
 /* блок «Цветовая гамма» */
@@ -323,11 +432,12 @@ textarea:focus {
 .color-spectrum__item {
   display: flex;
   justify-content: center;
-  gap: 100px;
+  gap: 90px;
 }
 
 .color-spectrum__inner {
   display: flex;
+  justify-content: center;
   flex-wrap: wrap;
 }
 
@@ -347,6 +457,39 @@ textarea:focus {
 
 .color-spectrum__img p {
   font-size: 14px;
+}
+
+@media screen and (max-width: 1000px) {
+  .color-spectrum__title {
+    font-size: 37px;
+  }
+  .color-spectrum__item {
+    gap: 40px;
+  }
+  .color-spectrum__img p {
+    font-size: 13px;
+  }
+  .color-spectrum__text {
+    font-size: 14px;
+  }
+}
+
+@media screen and (max-width: 845px) {
+  .color-spectrum {
+    margin-bottom: 20px;
+  }
+  .color-spectrum__title {
+    font-size: 30px;
+  }
+  .color-spectrum__inner:first-child {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 550px) {
+  .color-spectrum__title {
+    font-size: 25px;
+  }
 }
 
 /* блок «Популярные размеры деревянных жалюзи» */
@@ -386,18 +529,16 @@ textarea:focus {
 }
 
 .blinds-dimensions__item {
-  margin-bottom: 30px;
-}
-
-.blinds-dimensions__item {
   display: flex;
   justify-content: space-around;
+  flex-wrap: wrap;
+  gap: 15px;
+  margin-bottom: 30px;
 }
 
 .blinds-dimensions__inner {
   display: flex;
   flex-direction: column;
-  width: 100%;
   text-align: center;
 }
 
@@ -415,6 +556,42 @@ textarea:focus {
   margin-top: 20px;
 }
 
+@media screen and (max-width: 1000px) {
+  .blinds-dimensions__title {
+    margin-bottom: 15px;
+    font-size: 37px;
+  }
+  .blinds-dimensions__content {
+    margin-bottom: 35px;
+  }
+  .blinds-dimensions__content,
+  .blinds-dimensions__content p {
+    font-size: 14px;
+  }
+  .blinds-dimensions__info > span {
+    font-size: 14px;
+  }
+  .blinds__price {
+    font-size: 14px;
+  }
+  .blinds__price span {
+    font-size: 20px;
+  }
+}
+
+@media screen and (max-width: 845px) {
+  .blinds-dimensions__content .blinds-dimensions__title {
+    font-size: 30px;
+    line-height: 1.3;
+  }
+}
+
+@media screen and (max-width: 550px) {
+  .blinds-dimensions__content .blinds-dimensions__title {
+    font-size: 25px;
+  }
+}
+
 /* блок «Типы установки» */
 .install-types {
   margin-bottom: 50px;
@@ -427,6 +604,7 @@ textarea:focus {
 .install-types__tab-menu-item {
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
   max-width: 900px;
   margin: 0 auto;
   list-style-type: none;
@@ -463,6 +641,23 @@ textarea:focus {
   font-weight: 500;
 }
 
+@media screen and (max-width: 1000px) {
+  .install-types__tab-menu-item {
+    font-size: 14px;
+    justify-content: space-around;
+  }
+}
+
+@media screen and (max-width: 845px) {
+  .install-types__tab-menu-item {
+    gap: 10px;
+    width: 50%;
+  }
+  .install-types__tab-menu-btn {
+    width: 100%;
+  }
+}
+
 /* блок «Управление» */
 .blinds-control {
   margin-bottom: 50px;
@@ -490,91 +685,239 @@ textarea:focus {
   font-size: 14px;
 }
 
-/* блок «Типы крепления» */
-  .mounting-types {
-    margin-bottom: 50px;
+@media screen and (max-width: 1000px) {
+  .taking-measurements__text {
+    font-size: 14px;
   }
+}
+
+@media screen and (max-width: 985px) {
+  .taking-measurements__wrapper:not(:last-child), 
+  .taking-measurements__title {
+    margin-bottom: 8px;
+  }
+}
+
+/* блок «Типы крепления» */
+.mounting-types {
+  margin-bottom: 50px;
+}
   
 /* блок «Этапы работы» */
-  .work-stages {
-    min-height: 768px;
-    margin-bottom: 50px;
-    padding: 20px 40px;
-    background: #e9eef2 url(img/banner/work-stages-bg.jpg) no-repeat center/cover;
-  }
+.work-stages {
+  max-width: 1336px;
+  min-height: 768px;
+  margin: 0 auto 50px;
+  padding: 20px 40px;
+  background: #e9eef2 url(img/banner/work-stages-bg.jpg) no-repeat center/cover;
+}
 
+.work-stages__content {
+  max-width: 700px;
+  margin-left: auto;
+}
+
+.work-stages__title {
+  font-size: 39px;
+  font-weight: 600;
+  color: #0490d7;
+  text-align: center;
+}
+
+.word-stages__info-block {
+  margin: 30px 0;
+  padding: 20px;
+  border-radius: 10px;
+  background-color: rgba(255, 255, 255, .8)
+}
+
+.word-stages__info-title {
+  font-size: 20px;
+  font-weight: 600;
+  text-align: center;
+  color: #0490d7;
+}
+
+.word-stages__info-list {
+  margin: 20px 0;
+  list-style-type: none;
+}
+
+.word-stages__info-link {
+  padding-left: 25px;
+  background: url(img/check-img.png) no-repeat 0 3px;
+}
+
+.word-stages__info-link:not(:last-child) {
+  margin-bottom: 5px;
+}
+
+@media screen and (max-width: 1000px) {
   .work-stages__content {
-    max-width: 700px;
-    margin-left: auto;
+    max-width: 550px;
   }
-
   .work-stages__title {
-    font-size: 39px;
-    font-weight: 600;
-    color: #0490d7;
-    text-align: center;
+    font-size: 37px;
   }
-
   .word-stages__info-block {
-    margin: 30px 0;
-    padding: 20px;
-    border-radius: 10px;
-    background-color: rgba(255, 255, 255, .8)
-  }
-
-  .word-stages__info-title {
-    font-size: 20px;
-    font-weight: 600;
-    text-align: center;
-    color: #0490d7;
-  }
-
-  .word-stages__info-list {
     margin: 20px 0;
-    list-style-type: none;
+    font-size: 14px;
   }
+}
 
-  .word-stages__info-link {
-    padding-left: 25px;
-    background: url(img/check-img.png) no-repeat 0 3px;
+@media screen and (max-width: 845px) {
+  .work-stages {
+    margin-bottom: 40px;
   }
-
-  .word-stages__info-link:not(:last-child) {
-    margin-bottom: 5px;
+  .work-stages__title {
+    font-size: 30px;
   }
+}
 
-  /* блок «Ответы на частые вопросы» */
-  .faq {
-    margin-bottom: 50px;
+@media screen and (max-width: 550px) {
+  .work-stages {
+    padding: 20px 10px;
   }
+}
 
+/* блок «Ответы на частые вопросы» */
+.faq {
+  margin-bottom: 50px;
+}
+
+.faq__title {
+  margin-bottom: 40px;
+  font-size: 39px;
+  font-weight: 500;
+  color: #0490d7;
+  text-align: center;
+}
+
+.faq__item {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+
+.faq__inner:nth-child(-n+3) {
+  margin-bottom: 40px;
+}
+
+.faq__question {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+  max-width: 300px;
+  margin: 20px auto;
+  font-weight: 500;
+}
+
+.faq__answer {
+  max-width: 400px;
+  margin: 0 auto;
+}
+
+@media screen and (max-width: 1280px) {
   .faq__title {
-    margin-bottom: 40px;
-    font-size: 39px;
-    font-weight: 500;
-    color: #0490d7;
-    text-align: center;
+    margin-bottom: 30px;
+    font-size: 37px;
   }
-
   .faq__item {
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
+    font-size: 14px;
   }
-
   .faq__inner {
-    max-width: 400px;
+    width: 50%;
   }
-
-  .faq__inner:nth-child(-n+3) {
+  .faq__inner:nth-child(-n+4) {
     margin-bottom: 40px;
   }
+}
 
-  .faq__question {
-    display: flex;
-    align-items: center;
-    gap: 15px;
-    max-width: 300px;
-    margin-bottom: 20px;
-    font-weight: 500;
+@media screen and (max-width: 845px) {
+  .faq__title {
+    margin-bottom: 10px;
+    font-size: 30px;
   }
+  .faq__inner {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 550px) {
+  .faq__title {
+    font-size: 25px;
+  }
+}
+
+/* блок «Примеры работ» */
+.work-examples {
+  margin-bottom: 50px;
+}
+
+.work-examples__content {
+  max-width: 760px;
+  margin: 0 auto 40px;
+  text-align: center;
+}
+
+.work-examples__title {
+  margin-bottom: 20px;
+  font-size: 39px;
+  font-weight: 500;
+  color: #0490d7;
+}
+
+.work-examples__text {
+  font-weight: 500;
+}
+
+.work-examples__item {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.work-examples__inner img {
+  display: block;
+  max-width: 300px;
+  margin: 0 auto;
+}
+
+@media screen and (max-width: 1280px) {
+  .work-examples__inner {
+    width: 50%;
+  }
+  .work-examples__inner:nth-child(-n+2) img {
+    margin-bottom: 40px;
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  .work-examples__title {
+    font-size: 37px;
+  }
+  .work-examples__text {
+    font-size: 14px;
+  }
+}
+
+@media screen and (max-width: 845px) {
+  .work-examples {
+    margin-bottom: 20px;
+  }
+  .work-examples__title {
+    font-size: 30px;
+  }
+  .work-examples__inner {
+    width: 100%;
+  }
+  .work-examples__inner img {
+    margin-bottom: 40px;
+  }
+}
+
+@media screen and (max-width: 550px) {
+  .work-examples__title {
+    font-size: 25px;
+  }
+}
